--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-three/drei": "^9.70.0",
     "@react-three/fiber": "^8.13.0",
+    "@react-three/postprocessing": "^2.14.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +14,8 @@
     "@theatre/r3f": "^0.6.1",
     "@theatre/studio": "^0.6.1",
     "gsap": "^3.11.5",
+    "leva": "^0.9.34",
+    "postprocessing": "^6.31.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gsap": "^3.2.1",
