--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.11.5",
     "leva": "^0.9.34",
     "postprocessing": "^6.31.0",
+    "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gsap": "^3.2.1",
